--- a/TNA_philosophy.html
+++ b/TNA_philosophy.html
@@ -1,3 +1,4 @@
+<p><b>The philosophy</b></p>
 <p>A new set of utility apps that provide extra tools for travellers, explorers and people who are always on the move.</p>
             <p>It&apos;s a community-driven project where everyone is welcome to share their feedback and ideas about new apps, so we can build the apps we need.</p>
             <p>Enjoy multi-place searches, double map comparison and location-based alarms, easily and efficiently.</p>
