--- a/MSM_appdescription.html
+++ b/MSM_appdescription.html
@@ -1,4 +1,4 @@
-<p>Expand your search capability.</p>
+<p><b>Expand your search capability</b></p>
 <p>Search for multiple places or services in one go. Check the different results on the map simultaneously, plan a multi-step route, and start navigating.&nbsp;</p>
 <p>Are you looking for ATMs, bakeries, gas stations around you or everywhere, and you want to see all of them on one map at the same time?&nbsp;</p>
 <p>With Multisearch Map, you can.</p>
