--- a/GPSA_appdescription.html
+++ b/GPSA_appdescription.html
@@ -1,4 +1,4 @@
-<p>The location-based alarm system.</p>
+<p><strong>The location-based alarm system.</strong></p>
 <p>Are you always on the move and need to be notified when entering or leaving specific areas?</p>
 <p>Do you want to take a nap on your bus or train without missing your stop?</p>
 <p>Do you want to be reminded to buy anything when approaching your favourite stores?</p>
