--- a/MSM_appdescription.html
+++ b/MSM_appdescription.html
@@ -1,10 +1,10 @@
-<p><b>Expand your search capability</b></p>
+<p><strong>Expand your search capability</strong></p>
 <p>Search for multiple places or services in one go. Check the different results on the map simultaneously, plan a multi-step route, and start navigating.&nbsp;</p>
 <p>Are you looking for ATMs, bakeries, gas stations around you or everywhere, and you want to see all of them on one map at the same time?&nbsp;</p>
 <p>With Multisearch Map, you can.</p>
 <ul>
   <li>Set the location and radius for your search</li>
-  <li>Add one or more keywords [to your search] and customise their color indicator</li>
+  <li>Add one or more keywords and customise their color indicator</li>
   <li>Enable Deep Search mode to get more results</li>
   <li>Add places to your navigation route or pin them</li>
   <li>Start Google Maps Navigation with the multi-step route you have planned</li>
