--- a/2M_appdescription.html
+++ b/2M_appdescription.html
@@ -1,6 +1,6 @@
 <p><strong>Explore and compare maps in a new way</strong></p>
 <p>Sometimes you need just more than one map.</p>
-<p>Improve your view of the earth's surface. Explore your tracks with more detail, simulate an airplane view more efficiently, compare and mark areas, play!</p>
+<p>Improve your view of the earth's surface. Explore your tracks with more detail, simulate an aerial view more efficiently, compare and mark areas, play!</p>
 <p>Two maps side by side or overlapping each other, of the same or different type (street/satellite/terrain), you choose.</p>
 <p>Maybe you want to compare the size and shape of different areas visually, merge the details of a street and satellite view together, or check a point from different perspectives, and so on.</p>
 <p>2Maps, here we go!&nbsp;</p>
