--- a/TNA_philosophy.html
+++ b/TNA_philosophy.html
@@ -1,5 +1,5 @@
 <p><b>The philosophy</b></p>
-<p>Tech Nomad Apps is a new set of utility apps that provide extra tools for travellers, explorers and people who are always on the move.</p>
+<p>Mapfulness is a new set of utility apps that provide extra tools for travellers, explorers and people who are always on the move.</p>
             <p>It&apos;s a community-driven project where everyone is welcome to share their feedback and ideas about new apps, so we can build the apps we need.</p>
             <p>Enjoy multi-place searches, double map comparison and location-based alarms, easily and efficiently.</p>
             <p><br />More apps with new functionalities to come! </p>
