--- a/policies_and_terms/GPS Alarm - privacy_policy.html
+++ b/policies_and_terms/GPS Alarm - privacy_policy.html
@@ -7,8 +7,8 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p> Tech Nomad Apps built the GPS Alarm app as a Freemium app. This SERVICE is provided by
-                    Tech Nomad Apps at no cost and is intended for use as is.
+    <h2>Privacy Policy</h2> <p> Mapfulness built the GPS Alarm app as a Freemium app. This SERVICE is provided by
+                    Mapfulness at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in
