Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -14,10 +14,18 @@
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #47A724;
             color: white;
             padding: 20px 10px;
             text-align: center;
+        }
+        header h1 {
+            font-size: 2em;
+            margin: 0;
+        }
+        header p {
+            font-size: 1.1em;
+            margin: 5px 0 0 0;
         }
         main {
             max-width: 800px;
@@ -28,7 +36,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #4CAF50;
+            color: #47A724;
         }
         section {
             margin-bottom: 20px;
@@ -40,7 +48,7 @@
             color: #666;
         }
         a {
-            color: #4CAF50;
+            color: #47A724;
             text-decoration: none;
         }
         a:hover {
