Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Mapfulness</title>
+    <title>Privacy Policy - Mapful</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 <body>
     <header>
         <h1>Privacy Policy</h1>
-        <p>Last Updated: [Insert Date]</p>
+        <p>Last Updated: [Insert Date] -1 </p>
     </header>
     <main>
         <section>
