Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -152,7 +152,7 @@
         </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 1.0, Effective [Insert Date]</strong></p>
+        <p><strong>Privacy Policy Version 2.0.1, Effective December 27, 2024</strong></p>
     </footer>
 </body>
 </html>
