Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Mapful</title>
+    <title style="color: #47A724;">Privacy Policy - Mapful</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,8 +58,8 @@
 </head>
 <body>
     <header>
-        <h1>Privacy Policy</h1>
-        <p>Last Updated: [Insert Date] -1 </p>
+        <h1 style="color: #47A724;">Privacy Policy</h1>
+        <p>Last Updated: January 1, 2025</p>
     </header>
     <main>
         <section>
@@ -147,12 +147,11 @@
         <section>
             <h2>12. Contact Us</h2>
             <p>If you have questions or concerns about this Privacy Policy, please contact us:</p>
-            <p><strong>Email:</strong> [Insert Contact Email]</p>
-            <p><strong>Address:</strong> [Insert Address, if applicable]</p>
+            <p><strong>Email:</strong> mapfulness.app@gmail.com</p>
         </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 2.0.1, Effective December 27, 2024</strong></p>
+        <p><strong>Privacy Policy Version 2.0.1, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
