Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="color: #47A724;">Privacy Policy - Mapful</title>
+    <title>Mapful Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <h1 style="color: #47A724;">Privacy Policy</h1>
+        <h1>Mapful Privacy Policy</h1>
         <p>Last Updated: January 1, 2025</p>
     </header>
     <main>
@@ -125,7 +125,7 @@
         <section>
             <h2>7. Children’s Privacy</h2>
             <p>Mapfulness is not available for users under the age of 13. We do not knowingly allow children to use the app.</p>
-            <p>If you are a parent or guardian and believe your child has used Mapfulness without your consent, please contact us at [Insert Contact Email]. We will investigate and address any concerns promptly.</p>
+            <p>If you are a parent or guardian and believe your child has used Mapfulness without your consent, please contact us at mapfulness.app@gmail.com. We will investigate and address any concerns promptly.</p>
         </section>
         <section>
             <h2>8. Your Rights and Choices</h2>
@@ -151,7 +151,7 @@
         </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 2.0.2, Effective January 1, 2025</strong></p>
+        <p><strong>Privacy Policy Version 2.0.3, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
