Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -78,7 +78,7 @@
         <section>
             <h2>2. Introduction</h2>
             <p>
-                Mapfulness is developed by [Your Company Name] and offered as a freemium mobile application available on Google Play. This app provides location-based functionalities and tools to enhance your experience. We prioritize transparency, user control, and privacy.
+                Mapfulness is developed by Mapfulness and offered as a freemium mobile application available on Google Play. This app provides location-based functionalities and tools to enhance your experience. We prioritize transparency, user control, and privacy.
             </p>
         </section>
         <section>
