--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <h1>Mapful Privacy Policy</h1>
+        <h1 style="color: #47A724;>Mapful Privacy Policy</h1>
         <p>Last Updated: January 1, 2025</p>
     </header>
     <main>
@@ -151,7 +151,7 @@
         </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 2.0.3, Effective January 1, 2025</strong></p>
+        <p><strong>Privacy Policy Version 2.0.4, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
