Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background-color: #47A724;
+            background-color: #0288D1;
             color: white;
             padding: 20px 10px;
             text-align: center;
@@ -36,7 +36,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #47A724;
+            color: #0288D1;
         }
         section {
             margin-bottom: 20px;
@@ -48,7 +48,7 @@
             color: #666;
         }
         a {
-            color: #47A724;
+            color: #0288D1;
             text-decoration: none;
         }
         a:hover {
@@ -68,22 +68,24 @@
                 For the purposes of this Privacy Policy, the following terms are defined:
             </p>
             <ul>
+                <li><strong>Mapful:</strong> A mobile application developed by Mapfulness, offering location-based tools and features such as GPS alarms and geofencing to enhance user productivity and convenience.</li>
+                <li><strong>Mapfulness:</strong> The developer and company responsible for creating and maintaining the Mapful app.</li>
                 <li><strong>Personal Data:</strong> Any information that identifies or could identify an individual, such as a name, email address, or phone number.</li>
                 <li><strong>Anonymized Data:</strong> Information that does not identify an individual and cannot reasonably be used to re-identify them.</li>
                 <li><strong>Third-Party Services:</strong> External services or platforms not operated by Mapfulness that may process data on our behalf, such as Firebase for analytics and crash reporting.</li>
                 <li><strong>Permissions:</strong> The authorizations you grant the app to access specific device features (e.g., location or notifications) to enable core functionalities.</li>
-                <li><strong>Cookies:</strong> Small files stored on a user's device by a website or service to collect and track information. (Note: Mapfulness does not use cookies directly.)</li>
+                <li><strong>Cookies:</strong> Small files stored on a user's device by a website or service to collect and track information. (Note: Mapful does not use cookies directly.)</li>
             </ul>
         </section>
         <section>
             <h2>2. Introduction</h2>
             <p>
-                Mapfulness is developed by Mapfulness and offered as a freemium mobile application available on Google Play. This app provides location-based functionalities and tools to enhance your experience. We prioritize transparency, user control, and privacy.
+                Mapful is developed by Mapfulness and offered as a freemium mobile application available on Google Play. This app provides location-based functionalities and tools to enhance your experience. We prioritize transparency, user control, and privacy.
             </p>
         </section>
         <section>
             <h2>3. Data We Collect</h2>
-            <p>We do not collect or store your personal data on our servers. Any data handled by Mapfulness is either processed locally on your device or managed by third-party services, such as Firebase, for app performance purposes.</p>
+            <p>We do not collect or store your personal data on our servers. Any data handled by Mapful is either processed locally on your device or managed by third-party services, such as Firebase, for app performance purposes.</p>
             <h3>a) Location Data</h3>
             <p>Location data is used exclusively for app features like GPS alarms and geofencing. This data is processed locally on your device and never transmitted to us or third parties.</p>
             <h3>b) Crash and Diagnostic Data</h3>
@@ -99,7 +101,7 @@
         </section>
         <section>
             <h2>4. Permissions</h2>
-            <p>Mapfulness requests certain device permissions to enable core functionalities:</p>
+            <p>Mapful requests certain device permissions to enable core functionalities:</p>
             <ul>
                 <li><strong>Location Access:</strong> Required for GPS alarms and geofencing. Location data is processed entirely on your device and never shared or collected.</li>
                 <li><strong>Notifications:</strong> Allows the app to send location-based alerts and reminders.</li>
@@ -120,12 +122,12 @@
         </section>
         <section>
             <h2>6. No Ads or Marketing Data</h2>
-            <p>Mapfulness does not use advertising services, collect advertising identifiers, or share data for marketing purposes.</p>
+            <p>Mapful does not use advertising services, collect advertising identifiers, or share data for marketing purposes.</p>
         </section>
         <section>
             <h2>7. Children’s Privacy</h2>
-            <p>Mapfulness is not available for users under the age of 13. We do not knowingly allow children to use the app.</p>
-            <p>If you are a parent or guardian and believe your child has used Mapfulness without your consent, please contact us at mapfulness.app@gmail.com. We will investigate and address any concerns promptly.</p>
+            <p>Mapful is not available for users under the age of 13. We do not knowingly allow children to use the app.</p>
+            <p>If you are a parent or guardian and believe your child has used Mapful without your consent, please contact us at mapfulness.app@gmail.com. We will investigate and address any concerns promptly.</p>
         </section>
         <section>
             <h2>8. Your Rights and Choices</h2>
@@ -134,11 +136,11 @@
         </section>
         <section>
             <h2>9. Cookies</h2>
-            <p>Mapfulness does not use cookies or similar technologies. Third-party services integrated into the app (e.g., Firebase) do not rely on cookies for their functionality within Mapfulness.</p>
+            <p>Mapful does not use cookies or similar technologies. Third-party services integrated into the app (e.g., Firebase) do not rely on cookies for their functionality within Mapful</p>
         </section>
         <section>
             <h2>10. Compliance</h2>
-            <p>Mapfulness complies with applicable privacy laws, including the <strong>General Data Protection Regulation (GDPR)</strong> for European Union users and the <strong>California Consumer Privacy Act (CCPA)</strong> for residents of California.</p>
+            <p>Mapful complies with applicable privacy laws, including the <strong>General Data Protection Regulation (GDPR)</strong> for European Union users and the <strong>California Consumer Privacy Act (CCPA)</strong> for residents of California.</p>
         </section>
         <section>
             <h2>11. Changes to This Privacy Policy</h2>
@@ -151,7 +153,7 @@
         </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 2.0.5, Effective January 1, 2025</strong></p>
+        <p><strong>Privacy Policy Version 2.1, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
