Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -149,8 +149,9 @@
         <section>
             <h2>12. Contact Us</h2>
             <p>If you have questions or concerns about this Privacy Policy, please contact us:</p>
-            <p><strong>Email:</strong> mapfulness.app@gmail.com</p>
-        </section>
+            <ul>
+                <li>Email: <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></li>
+            </ul>        </section>
     </main>
     <footer>
         <p><strong>Privacy Policy Version 2.1, Effective January 1, 2025</strong></p>
