Update GPS Alarm - terms_and_conditions.html

--- a/policies_and_terms/GPS Alarm - terms_and_conditions.html
+++ b/policies_and_terms/GPS Alarm - terms_and_conditions.html
@@ -152,13 +152,11 @@
         <section>
             <h2>11. Contact Us</h2>
             <p>If you have any questions or suggestions about these Terms & Conditions, please contact us:</p>
-            <ul>
-                <li>Email: <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></li>
-            </ul>
+            <p><strong>Email:</strong> <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></p>
         </section>
     </main>
     <footer>
-        <p><strong>Terms & Conditions Version 2.1, Effective January 1, 2025</strong></p>
+        <p><strong>Terms & Conditions Version 2.2, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
