Update Mapful - Privacy Policy.html

--- a/policies_and_terms/Mapful - Privacy Policy.html
+++ b/policies_and_terms/Mapful - Privacy Policy.html
@@ -149,12 +149,11 @@
         <section>
             <h2>12. Contact Us</h2>
             <p>If you have questions or concerns about this Privacy Policy, please contact us:</p>
-            <ul>
-                <li>Email: <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></li>
-            </ul>        </section>
+            <p><strong>Email:</strong> <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></p>
+        </section>
     </main>
     <footer>
-        <p><strong>Privacy Policy Version 2.1, Effective January 1, 2025</strong></p>
+        <p><strong>Privacy Policy Version 2.2, Effective January 1, 2025</strong></p>
     </footer>
 </body>
 </html>
