Update RaceGPX - privacy_policy.html

--- a/policies_and_terms/RaceGPX - privacy_policy.html
+++ b/policies_and_terms/RaceGPX - privacy_policy.html
@@ -1,1 +1,148 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RaceGPX Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background-color: #47A724;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+        }
+        header h1 {
+            font-size: 2em;
+            margin: 0;
+        }
+        header p {
+            font-size: 1.1em;
+            margin: 5px 0 0 0;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #47A724;
+        }
+        section {
+            margin-bottom: 20px;
+        }
+        footer {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 0.9em;
+            color: #666;
+        }
+        a {
+            color: #47A724;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>RaceGPX Privacy Policy</h1>
+        <p>Last Updated: January 15, 2025</p>
+    </header>
+    <main>
+        <section>
+            <h2>1. Definitions</h2>
+            <p>For the purposes of this Privacy Policy, the following terms are defined:</p>
+            <ul>
+                <li><strong>RaceGPX:</strong> A mobile application developed by Mapfulness, offering location-based tools and in-race navigation features to improve performance for racers of all types.</li>
+                <li><strong>Mapfulness:</strong> The developer and company responsible for creating and maintaining RaceGPX.</li>
+                <li><strong>Personal Data:</strong> Any information that identifies or could identify an individual, such as a name, email address, or phone number.</li>
+                <li><strong>Anonymized Data:</strong> Information that does not identify an individual and cannot reasonably be used to re-identify them.</li>
+                <li><strong>Third-Party Services:</strong> External services or platforms not operated by Mapfulness that may process data on our behalf, such as Firebase for analytics and crash reporting.</li>
+                <li><strong>Permissions:</strong> The authorizations you grant the app to access specific device features (e.g., location or notifications) to enable core functionalities.</li>
+                <li><strong>Cookies and Similar Technologies:</strong> Small files stored on a user's device by a website or service to collect and track information.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>2. Introduction</h2>
+            <p>RaceGPX is developed by Mapfulness and offered as a freemium mobile application available on Google Play. This app provides location-based functionalities and other tools to enhance your racing performance. We prioritize transparency, user control, and privacy.</p>
+        </section>
+        <section>
+            <h2>3. Data We Collect</h2>
+            <p>We do not collect or store your personal data on our servers. Any data handled by RaceGPX is either processed locally on your device or managed by third-party services, such as Firebase, for app performance purposes. Additional data may be shared with trusted third parties for marketing or advertising purposes. See section 6 below for more details on advertising and marketing data.</p>
+            <h3>a) Location Data</h3>
+            <p>Location data is used exclusively for app features like GPS-based alarms and geofencing. This data is processed locally on your device and never transmitted to us or third parties.</p>
+            <h3>b) Crash and Diagnostic Data</h3>
+            <p>To improve app stability, we use Firebase Crashlytics, a service provided by Google, which collects:</p>
+            <ul>
+                <li>Device information (e.g., model, operating system).</li>
+                <li>App settings and configurations at the time of a crash.</li>
+                <li>Timestamps and crash logs.</li>
+            </ul>
+            <p>This data is anonymized and used solely to diagnose and resolve technical issues.</p>
+            <h3>c) Usage Analytics</h3>
+            <p>We use Firebase Analytics to gather anonymized data about app usage, such as feature interactions and session duration. This helps us enhance the app’s functionality and user experience.</p>
+        </section>
+        <section>
+            <h2>4. Permissions</h2>
+            <p>RaceGPX requests certain device permissions to enable core functionalities:</p>
+            <ul>
+                <li><strong>Location Access:</strong> Required for GPS-based alarms and geofencing. Location data is processed entirely on your device and never shared or collected.</li>
+                <li><strong>Notifications:</strong> Allows the app to send location-based alerts and reminders.</li>
+                <li><strong>Microphone:</strong> Allows the app to utilize your device’s microphone to record custom audio for use as auditory GPS-based reminders.</li>
+            </ul>
+            <p>These permissions are requested when you first use a relevant feature and are strictly used to deliver the app’s functionalities. No data associated with these permissions is collected, stored, or shared by us or any third parties.</p>
+        </section>
+        <section>
+            <h2>5. How Your Data Is Handled</h2>
+            <p><strong>No Collection or Storage by Developer:</strong> As the developer, we do not collect, store, or process any data on our servers.</p>
+            <p><strong>Third-Party Services:</strong> Data collected by Firebase (Crashlytics and Analytics) is anonymized and used solely for app performance and diagnostic purposes. Data utilized for marketing and advertising purposes is transmitted through a third-party pixel (e.g., Meta). This data is anonymized within the third-party application.</p>
+        </section>
+        <section>
+            <h2>6. Ads and Marketing Data</h2>
+            <p>RaceGPX may collect certain information to provide personalized advertising experiences, improve ad effectiveness, and deliver relevant ads both within the app and on third-party platforms, such as Facebook and Instagram. This information may include device identifiers, IP addresses, app usage data, and demographic details.</p>
+        </section>
+        <section>
+            <h2>7. Children’s Privacy</h2>
+            <p>RaceGPX is not available for users under the age of 13. If you believe your child has used RaceGPX without consent, please contact us at <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a>.</p>
+        </section>
+        <section>
+            <h2>8. Your Rights and Choices</h2>
+            <p>- <strong>Permission Control:</strong> Manage location and notification permissions via your device settings.</p>
+            <p>- <strong>Access and Deletion:</strong> Since we do not collect personal data, no action is required to delete it.</p>
+        </section>
+        <section>
+            <h2>9. Cookies and Similar Technologies</h2>
+            <p>RaceGPX may use cookies and similar technologies, such as pixel tags or local storage, to enhance user experience and serve relevant advertisements.</p>
+        </section>
+        <section>
+            <h2>10. Compliance</h2>
+            <p>RaceGPX complies with applicable privacy laws, including the <strong>General Data Protection Regulation (GDPR)</strong> for European Union users and the <strong>California Consumer Privacy Act (CCPA)</strong> for California residents.</p>
+        </section>
+        <section>
+            <h2>11. Changes to This Privacy Policy</h2>
+            <p>We may update this Privacy Policy to reflect changes in our practices. Updates will be posted within the app and will take effect upon publication.</p>
+        </section>
+        <section>
+            <h2>12. Contact Us</h2>
+            <p>If you have questions about this Privacy Policy, contact us:</p>
+            <p><strong>Email:</strong> <a href="mailto:mapfulness.app@gmail.com">mapfulness.app@gmail.com</a></p>
+        </section>
+    </main>
+    <footer>
+        <p><strong>Privacy Policy Version 1.0, Effective January 15, 2025</strong></p>
+    </footer>
+</body>
+</html>
