Update RaceGPX - privacy_policy.html

--- a/policies_and_terms/RaceGPX - privacy_policy.html
+++ b/policies_and_terms/RaceGPX - privacy_policy.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background-color: #47A724;
+            background-color: #D84127;
             color: white;
             padding: 20px 10px;
             text-align: center;
@@ -36,7 +36,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #47A724;
+            color: #D84127;
         }
         section {
             margin-bottom: 20px;
@@ -48,7 +48,7 @@
             color: #666;
         }
         a {
-            color: #47A724;
+            color: #D84127;
             text-decoration: none;
         }
         a:hover {
